# spotify-clone-django

./: .gitignore  README.md  pyproject.toml
app/: urls.py  views.py
app/templates/app/: base.html
app/templates/app/partials/: _header.html
spotify/: asgi.py  settings.py  urls.py  wsgi.py
