[tool.poetry]
name = "spotify-clone-django"
version = "0.1.0"
description = "Criação de um projeto clone do app spotify."
authors = ["Sander Toledo <sanderaugusto@gmail.com>"]
readme = "README.md"
packages = [{include = "spotify_clone_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.6"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
